--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@nuxt/eslint": "1.4.1",
     "@nuxt/ui": "3.2.0",
+    "@tailwindcss/vite": "^4.1.11",
     "eslint": "^9.0.0",
     "nuxt": "^3.17.5",
+    "tailwindcss": "^4.1.11",
     "typescript": "^5.6.3",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1"
