--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@tailwindcss/vite": "^4.1.11",
     "eslint": "^9.0.0",
     "nuxt": "^3.17.5",
+    "openai": "^5.8.2",
     "tailwindcss": "^4.1.11",
     "typescript": "^5.6.3",
     "vue": "^3.5.17",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "zod": "^3.23.8"
   }
 }
