--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,5 @@
+// Fichier de configuration TypeScript pour ce projet Nuxt.
+// Permet de définir les règles de compilation, les chemins, et la stricte vérification de type.
 {
   // https://nuxt.com/docs/guide/concepts/typescript
   "extends": "./.nuxt/tsconfig.json"
